--- a/public/css/post.css
+++ b/public/css/post.css
@@ -69,6 +69,7 @@ table .flex > *:last-child {
 
 .image, .video {
     text-align: center;
+    cursor: pointer;
 }
 .image img, .video video {
     width: 100%;
@@ -85,6 +86,7 @@ table .flex > *:last-child {
 
 .image .doodle {
     aspect-ratio: 1;
+    cursor: default;
 }
 
 .audio audio {
@@ -222,4 +224,22 @@ table .flex > *:last-child {
 .content > .video:last-child,
 .content > .album:last-child {
     margin-bottom: -1em;
+}
+
+.image-dialog {
+    padding: 0;
+    margin: 0;
+    border: none;
+    width: 100%;
+    height: 100%;
+    max-width: none;
+    max-height: none;
+    overflow: hidden;
+    background: var(--dialog-backdrop);
+}
+.image-dialog img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    cursor: pointer;
 }
