better env management

--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -216,6 +216,9 @@
     
 </body>
 
+<script>
+    const VAPID_KEY = '<%= process.env.VAPID_PUBLIC_KEY %>';
+</script>
 <script src="/js/lib/heic2any.min.js"></script>
 <script src="/js/post.js"></script>
 <script src="/js/postbuilder.js"></script>
