--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -99,6 +99,12 @@
                         </table>
                     </details>
                 </p>
+                
+                <p>
+                    <label>
+                        <a href="javascript:0;" onclick="preview_post()">preview post</a>
+                    </label>
+                </p>
             </div>
     
             <% if (locals.replying_to) { %>
@@ -212,6 +218,35 @@
 
     <dialog id="upload-dialog">
         uploading post...
+    </dialog>
+
+    <dialog id="post-preview-dialog">
+        <div class="post">
+            <table>
+                <tr>
+                    <td>
+                        <a tabindex="0">
+                            &lt;\--
+                        </a>
+                    </td>
+                    <td class="flex">
+                        <span class="grow">from <a href="javascript:0;"><em name="post_name"></em></a> · <span class="date-relative">0</span></span>
+                        <a href="javascript:0;">reply</a>
+                    </td>
+                </tr>
+                <% if (locals.replying_to) { %>
+                    <tr>
+                        <td>re:</td>
+                        <td class="flex">
+                            <a class="grow" href="javascript:0;"><%= replying_to.title %></a>
+                            <span>by <a href="javascript:0;"><%= replying_to.author %></a></span>
+                        </td>
+                    </tr>
+                <% } %>
+            </table>
+        </div>
+        <br>
+        <button class="dialog-close-button" onclick="this.parentElement.close()">close</button>
     </dialog>
     
 </body>
