--- a/public/css/new.css
+++ b/public/css/new.css
@@ -79,6 +79,28 @@ input[type="file"] {
     box-sizing: border-box;
 }
 
+#post-preview-dialog {
+    width: var(--max-post-width);
+    max-width: unset;
+    padding: .75rem;
+    overflow-x: hidden;
+}
+#post-preview-dialog .post {
+    width: 100%;
+    max-height: 50vh;
+    overflow-y: scroll;
+    color: var(--color);
+    text-align: left;
+}
+@media only screen and (max-width: 767px) {
+    #post-preview-dialog {
+        width: 100%;
+        box-sizing: border-box;
+        border-left: none;
+        border-right: none;
+    }
+}
+
 #post-name,
 #post-builder .block {
     background: var(--post-bg);
