--- a/public/css/new.css
+++ b/public/css/new.css
@@ -88,7 +88,7 @@ input[type="file"] {
 #post-preview-dialog .post {
     width: 100%;
     max-height: 65vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     color: var(--color);
     text-align: left;
 }
