m4a type fixed to x-m4a

--- a/public/css/new.css
+++ b/public/css/new.css
@@ -200,6 +200,10 @@ textarea {
 .audio .download-button {
     display: none;
 }
+#post-preview-dialog .audio .download-button {
+    display: block;
+    pointer-events: none;
+}
 
 /* draw block */
 
